--- a/home/templates/scontent.html
+++ b/home/templates/scontent.html
@@ -1,28 +1,50 @@
+<!DOCTYPE html>
+<html lang="ko">
 
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>Social Contents</title>
+	<!-- head style add-->
+	{% load static %}
+
+	<link rel="stylesheet" href="../activity/scontent.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+
+
+</head>
+
+<body>
 	{% extends 'base.html' %}
 	{% block content %}
 
-	<!-- start activity contents -->
-	
-	  <section class="pb-5 pt-5">
-      <div class="container">
-          <div class="row align-items-center justify-content-between ">
-            <div class="col-12 col-md-7  mt-4 mt-md-0">
-              <div class="embed-responsive embed-responsive-16by9 shadow-lg rounded overflow-hidden">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen=""></iframe>
-              </div>
-            </div>
-            <div class="col-12 col-md-5 pr-md-5 ">
-              <h1 class="mb-3 mt-5 display-4 font-weight-bold">Hello.</h1>
-              <p class="lead  ">A collection of coded HTML and CSS elements to help your build your new website. Clean design, fully responsive and based on Bootstrap.</p>
-              <div class="  d-flex mt-3 mb-1">
-                <a class="btn btn-success btn-lg  mt-md-3  " href="#" role="button">Learn more now</a>
-              </div>
-            </div>
-           
-          </div>
-        </div>
-   </section>
+
+	<!-- start social contents -->
+
+	<section class="pb-5 pt-5">
+		<div class="container">
+			<div class="row align-items-center justify-content-between ">
+				<div class="col-12 col-md-7  mt-4 mt-md-0">
+					<div class="embed-responsive embed-responsive-16by9 shadow-lg rounded overflow-hidden">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eyQyp4rXTGo" allowfullscreen=""></iframe>
+					</div>
+				</div>
+				<div class="col-12 col-md-5 pr-md-5">
+					<h1 class="mb-3 mt-5 display-5 font-weight-bold">5개월만에 말기 혈액암 극복 후 바뀐 것은?</h1>
+					<p>갑작스런 혈액암 4기 그리고 5개월만에 극복?</p>
+					<p>내 인생에 있어 암 투병 전과 후의 삶의 이야기.<br>
+
+						국내 최초 젊은 암 경험자(투병자&경험자)를 돕는 비영리법인 <b>'또봄'</b>과
+						유튜브를 시작하게 된 특별한 이유에 대해서 말합니다.</p>
+					<div class="  d-flex mt-3 mb-1">
+						<a class="btn btn-primary btn-md  mt-md-3  " href="#" role="button">자세히 보기</a>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
 
 
 
@@ -35,49 +57,61 @@
 			<!-- Blog Entries Column -->
 			<div class="col-md-8">
 
-				<h1 class="my-4">Page Heading
-					<small>Secondary Text</small>
+				<h1 class="my-4">스토리펀딩
+					<h4><small class="text-muted list-inline-item">2030 암환우 살리는 여행 버킷북 스토리</small></h4>
+
 				</h1>
 
 				<!-- Blog Post -->
 				<div class="card mb-4">
-					<img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+					<img class="card-img-top" src="../img/scont-img-01.png" height="500px" alt="Card image cap">
 					<div class="card-body">
-						<h2 class="card-title">Post Title</h2>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-						<a href="#" class="btn btn-primary">Read More &rarr;</a>
+						<h2 class="card-title">1화 젊은 사람이 암에 걸렸다고?</h2>
+						<cite title="source title">-혈액암 말기부터 일상까지<br><br></cite>
+						<p class="card-text text-truncate">저도 처음엔 스트레스성 위염인 줄 알았어요.
+							조직검사 결과, 버킷림프종 혈액암 말기라는 판정을 받았죠.....
+						</p>
+						<a href="#" class="btn btn-primary">자세히 보기 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
-						Posted on January 1, 2020 by
-						<a href="#">Start Bootstrap</a>
+						2020. 11. 24 by
+						<a href="#">일상을 찾아 떠나는 여행들 @이정훈</a>
 					</div>
 				</div>
 
 				<!-- Blog Post -->
 				<div class="card mb-4">
-					<img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+					<img class="card-img-top" src="../img/scont-img-02.jpg" height="" alt="Card image cap">
 					<div class="card-body">
-						<h2 class="card-title">Post Title</h2>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-						<a href="#" class="btn btn-primary">Read More &rarr;</a>
+						<h2 class="card-title">2화 저는 이미 죽은 사람이었어요</h2>
+						<cite title="source title">-혈액암 말기부터 일상까지<br><br></cite>
+						<p class="card-text text-truncate">2030 암 환자들은 젊다는 이유만으로 편견에 시달리곤해요. 갑작스럽게 혈액암 말기 선고를 받고 항암치료 때문에 회사에 병가를 냈는데, 어떤 분들은 제가 벌써 저 세상 사람인 것처럼 알고 있더라고요.
+						</p>
+						<a href="#" class="btn btn-primary">자세히 보기 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
-						Posted on January 1, 2020 by
-						<a href="#">Start Bootstrap</a>
+						2020. 11. 24 by
+						<a href="#">일상을 찾아 떠나는 여행들 @이정훈</a>
 					</div>
 				</div>
 
 				<!-- Blog Post -->
 				<div class="card mb-4">
-					<img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+					<img class="card-img-top" src="../img/scont-img-03.jpg" height="" alt="Card image cap">
+					<figcaption class="figure-caption">여행버킷북 사진 중</figcaption>
 					<div class="card-body">
-						<h2 class="card-title">Post Title</h2>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-						<a href="#" class="btn btn-primary">Read More &rarr;</a>
+						<h2 class="card-title">3화 다시 살고 싶어 떠난 여행</h2>
+						<cite title="source title">-내 생에 진짜 여행은 아직 시작되지 않았다<br><br></cite>
+						<p class="card-text text-truncate">갑작스런 혈액암 말기 선고, 끝나지 않을 것 같던 항암치료.
+							모든 고통을 견디게 한 가장 큰 힘은 바로 ‘여행’이었어요.
+							처음부터 여행을 꿈꾼 것 아녔어요. 완치 후 먹고픈 음식 리스트를 적다보니 예전에 사람들과 함께 다녔던 곳에 대한 기억들이 새록새록 떠올랐죠.
+
+						</p>
+						<a href="#" class="btn btn-primary">자세히 보기 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
-						Posted on January 1, 2020 by
-						<a href="#">Start Bootstrap</a>
+						2020. 11. 24 by
+						<a href="#">일상을 찾아 떠나는 여행들 @이정훈</a>
 					</div>
 				</div>
 
@@ -94,17 +128,21 @@
 			</div>
 
 			<!-- Sidebar Column -->
-			<div class="col-md-4 side-col h-100">
+			<div class="col-md-4 side-col h-100 ca-custom">
 				<h2>다른 컨텐츠</h2>
 				<div class="row row-cols-1 row-cols-md-1">
 					<div class="col mb-4">
 						<div class="card h-100">
 
 							<div class="embed-responsive embed-responsive-1by1">
-								<iframe class="embed-responsive-item card-img-top" src="https://www.youtube.com/embed/QuV9iPaZTBU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe class="embed-responsive-item card-img-top" src="https://www.youtube.com/embed/7DSe6iNYjI8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="card-body">
-								<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+								<p class="card-text">하고 싶은 것 하세요' 라고
+									당당하게 이야기 하는 청년이 있습니다
+
+									그리고 실제로 본인이 하고 싶은 것을 하면서 살아가고 있습니다.
+								</p>
 							</div>
 						</div>
 					</div>
@@ -112,20 +150,20 @@
 						<div class="card h-100">
 
 							<div class="embed-responsive embed-responsive-1by1">
-								<iframe class="embed-responsive-item card-img-top" src="https://www.youtube.com/embed/QuV9iPaZTBU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe class="embed-responsive-item card-img-top" src="https://www.youtube.com/embed/hZprEJ0Q6Ck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="card-body">
-								<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+								<p class="card-text">'하고 싶은 것 하세요' 라고 당당하게 이야기 하는 청년 창욱의 2번째 이야기입니다.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col mb-4">
 						<div class="card h-100">
 							<div class="embed-responsive embed-responsive-1by1">
-								<iframe class="embed-responsive-item card-img-top" src="https://www.youtube.com/embed/QuV9iPaZTBU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe class="embed-responsive-item card-img-top" src="https://www.youtube.com/embed/AtMg79rAkws" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="card-body">
-								<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+								<p class="card-text">[유방암] 여성암이니 그냥 숨기고 살라고?</p>
 							</div>
 						</div>
 					</div>
@@ -153,10 +191,10 @@
 
 
 
-<!-- <script>window.jQuery || document.write('<script src="js/jquery-1.10.1.min.js"><\/script>')</script>
+	<!-- <script>window.jQuery || document.write('<script src="js/jquery-1.10.1.min.js"><\/script>')</script>
 <script src="js/bootstrap.min.js"></script> -->
 
 
 	<!-- end start activity contents -->
 	{% endblock %}
-
+</body></html>
