--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -555,6 +555,14 @@ div#preloader {
 /*--------------------------------*/
 /* 4.Services Area
 /*--------------------------------*/
+.grid{
+  display: grid;
+  gap: 26px;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 6%;
+  margin-bottom: 50px;
+  text-align: center;
+}
 
 .services-icon {
   color: #444;
@@ -600,7 +608,6 @@ div#preloader {
 /*----------------------------------------
  5.Portfolio Area Css
 ----------------------------------------*/
-
 .single-awesome-portfolio {
   float: left;
   overflow: hidden;
@@ -755,119 +762,6 @@ div#preloader {
   color: #fff;
 }
 
-/*--------------------------------*/
-/*  7.Contact Area
-/*--------------------------------*/
-
-.contact-area {
-  height: auto;
-  width: 100%;
-}
-
-.contact-content {
-  padding: 100px;
-  background: #000 none repeat scroll 0 0;
-}
-
-.contact-content-right {
-  padding: 100px;
-}
-
-.contact-form input[type="text"], .contact-form input[type="email"] {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: 1px solid #ccc;
-  border-radius: 0;
-  color: #444;
-  height: 40px;
-  margin-bottom: 16px;
-  padding-left: 20px;
-  width: 100%;
-}
-
-.contact-form textarea  {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: 1px solid #ccc;
-  border-radius: 0;
-  color: #444;
-  height: 140px;
-  padding: 20px;
-  width: 100%;
-}
-
-.contact-form button[type="submit"] {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: 1px solid #ccc;
-  color: #444;
-  font-size: 16px;
-  font-weight: 700;
-  margin-top: 8px;
-  padding: 12px 30px;
-  text-transform: uppercase;
-  transition: all 0.3s ease 0s;
-  border-radius: 30px;
-}
-
-.contact-form button[type=submit]:hover {
-  color: #fff;
-  border: 1px solid #3EC1D5;
-  background: #3EC1D5;
-}
-
-.contact-form  #sendmessage {
-  color: #3EC1D5;
-  border: 1px solid #3EC1D5;
-  display: none;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-.contact-form #errormessage {
-  color: red;
-  display: none;
-  border: 1px solid red;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-.contact-form #sendmessage.show, .contact-form #errormessage.show, .contact-form .show {
-  display: block;
-}
-
-#contact .form .validation {
-  color: red;
-  display: none;
-  margin: 0 0 20px;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-.single-icon i {
-  font-size: 24px;
-  width: 50px;
-  height: 50px;
-  border: 1px solid #444;
-  line-height: 46px;
-  border-radius: 50%;
-  margin-bottom: 20px;
-}
-
-.single-icon p {
-  font-size: 16px;
-  line-height: 30px;
-}
-
-.contact-icon {
-  margin-bottom: 40px;
-}
-
-#google-map {
-  height: 370px;
-  margin-bottom: 20px;
-}
 
 /*----------------------------------------*/
 /*  8. Footer Area
