--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -35,7 +35,7 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
-  <div id="preloader"></div>
+  
     <header>
       <!-- header-area start -->
       <div id="sticker" class="header-area">
@@ -62,19 +62,19 @@
             <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
               <ul class="nav navbar-nav navbar-right">
                 <li class="active">
-                  <a class="page-scroll" href="#home">Home</a>
+                  <a class="page-scroll" href="main">Home</a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="#about">About</a>
+                  <a class="page-scroll" href="establish">About</a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="#services">Project</a>
+                  <a class="page-scroll" href="business">Project</a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="#portfolio">Activity</a>
+                  <a class="page-scroll" href="activity">Activity</a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="#contact">Contact</a>
+                  <a class="page-scroll" href="support">support</a>
                 </li>
               </ul>
             </div>
@@ -122,7 +122,7 @@
         <div class="col-md-6 col-sm-6 col-xs-12">
           <div class="well-left">
             <div class="single-well">
-              <a href="#">
+              <a href="establish">
 								  <img src="/static/img/img_about.jpg" alt="">
 								</a>
             </div>
@@ -132,7 +132,7 @@
         <div class="col-md-6 col-sm-6 col-xs-12">
           <div class="well-middle">
             <div class="single-well">
-              <a href="#">
+              <a href="establish">
                 <h4 class="sec-head">What We Do</h4>
               </a>
               <p>
@@ -163,130 +163,66 @@
   </div>
   <!-- End About area -->
 
-  <!-- Start Service area -->
-  <div id="services" class="services-area area-padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="section-headline services-head text-center">
-            <h2>Project</h2>
-          </div>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="services-contents">
-          <!-- Start Left services -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="business">
-											<i class="fas fa-paper-plane"></i>
-										</a>
-                  <h4>여행버킷리스트</h4>
-                  <p>
-                    암투병 중인 환자가 완치 후 가고싶은 해외여행지를 설정, 달성 시 동행 및 여행경비 지원
-                  </p>
-                </div>
+<!-- Start Service area -->
+<div id="services" class="services-area area-padding">
+  <div class="section-headline services-head text-center">
+    <h2>Project</h2>
+  </div>
+  <div class="wrapper grid">
+    <div class="item">
+      <a class="services-icon" href="business">
+         <i class="fas fa-paper-plane"></i></a>
+          <h4>여행버킷리스트</h4>
+            <p>
+              암투병 중인 환자가 완치 후 가고싶은 해외여행지를 설정, 달성 시 동행 및 여행경비 지원
+            </p>
+    </div>
+    <div class="item">
+      <a class="services-icon" href="business">
+        <i class="fa fa-camera-retro"></i></a>
+          <h4>여행포토북</h4>
+            <p>
+              여행버킷리스트를 가고 싶은 의지를 불러일으킬 수 있는 매개체
+            </p>
+    </div>
+    <div class="item">
+      <a class="services-icon" href="business">
+        <i class="fas fa-heart"></i></a>
+          <h4>봉사활동</h4>
+            <p>
+              암을 극복한 사람들이 암환자에게 전하는 해피 바이러스 봉사
+            </p>
+    </div>
+    <div class="item">
+      <a class="services-icon" href="business">
+        <i class="fas fa-icons"></i></a>
+          <h4>Social</h4>
+            <p>
+              암환자와 소통하고 응원할 수 있는 소셜 채널 만들기, 힐링 콘서트
+            </p>
               </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="business">
-											<i class="fa fa-camera-retro"></i>
-										</a>
-                  <h4>여행포토북</h4>
-                  <p>
-                    여행버킷리스트를 가고 싶은 의지를 불러일으킬 수 있는 매개체
-                  </p>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <!-- end col-md-4 -->
-            <div class=" about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="business">
-											<i class="fas fa-heart"></i>
-										</a>
-                  <h4>봉사활동</h4>
-                  <p>
-                    암을 극복한 사람들이 암환자에게 전하는 해피 바이러스 봉사
-                  </p>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <!-- end col-md-4 -->
-            <div class=" about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="business">
-											<i class="fas fa-icons"></i>
-										</a>
-                  <h4>Social</h4>
-                  <p>
-                    암환자와 소통하고 응원할 수 있는 소셜 채널 만들기, 힐링 콘서트
-                  </p>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-          <!-- End Left services -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <!-- end col-md-4 -->
-            <div class=" about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="business">
-											<i class="fas fa-seedling"></i>
-										</a>
-                  <h4>기부</h4>
-                  <p>
-                    치료비가 부족하여 치료가 어려운 2030대 암환자에게 치료비 지원하기
-                  </p>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-          <!-- End Left services -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <!-- end col-md-4 -->
-            <div class=" about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="business">
-											<i class="far fa-lightbulb"></i>
-										</a>
-                  <h4>Support</h4>
-                  <p>
-                    암 극복 후 재취업 지원
-                  </p>
-                </div>
-              </div>
-              <!-- end about-details -->
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="item">
+      <a class="services-icon" href="business">
+        <i class="fas fa-seedling"></i></a>
+          <h4>기부</h4>
+            <p>
+              치료비가 부족하여 치료가 어려운 2030대 암환자에게 치료비<br> 지원하기
+            </p>
+    </div>
+    <div class="item">
+      <a class="services-icon" href="business">
+        <i class="far fa-lightbulb"></i></a>
+          <h4>Support</h4>
+            <p>
+              암 극복 후 재취업 지원
+            </p>
     </div>
   </div>
   <!-- End Service area -->
 
 
-  <!-- Start Activity Area -->
-  <div id="portfolio" class="portfolio-area area-padding fix">
+   <!-- Start Activity Area -->
+   <div id="portfolio" class="portfolio-area area-padding fix">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -296,13 +232,12 @@
         </div>
       </div>
       <div class="row">
-          <div class="col-md-4 col-sm-4 col-xs-12 design development">
+          <div class="col-md-4 col-sm-4 col-xs-12 photo">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="/static/img/main/main1.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="activity">
                       <h4>후원인의 밤</h4>
                     </a>
                   </div>
@@ -318,7 +253,6 @@
                 <a href="#"><img src="/static/img/main/main2.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="activity">
                       <h4>포토북</h4>
                     </a>
                   </div>
@@ -328,13 +262,12 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design">
+          <div class="col-md-4 col-sm-4 col-xs-12 photo">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="/static/img/main/main3.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="activity">
                       <h4>재능기부 클래스</h4>
                     </a>
                   </div>
@@ -344,13 +277,12 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo development">
+          <div class="col-md-4 col-sm-4 col-xs-12 photo">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="/static/img/main/main4.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="activity">
                       <h4>3주년 앙상블 파티</h4>
                     </a>
                   </div>
@@ -360,13 +292,12 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 development">
+          <div class="col-md-4 col-sm-4 col-xs-12 photo">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="/static/img/main/main5.jpg" alt="" /></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="activity">
                       <h4>여름캠프</h4>
                     </a>
                   </div>
@@ -376,13 +307,12 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design photo">
+          <div class="col-md-4 col-sm-4 col-xs-12 photo">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="/static/img/main/main6.jpg" alt="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="activity">
                       <h4>Youtube 운영</h4>
                     </a>
                   </div>
@@ -406,104 +336,13 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs=12">
           <div class="suscribe-text text-center">
             <h3>한국청년암협회또봄과 함께하기</h3>
-            <a class="sus-btn" href="#">후원하기</a>
+            <a class="sus-btn" href="support">후원하기</a>
           </div>
         </div>
       </div>
     </div>
   </div>
   <!-- End Support Area -->
-
-  <!-- Start contact Area -->
-  <div id="contact" class="contact-area">
-    <div class="contact-inner area-padding">
-      <div class="contact-overly"></div>
-      <div class="container ">
-        <div class="row">
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <div class="section-headline text-center">
-              <h2>Contact us</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <!-- Start contact icon column -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="contact-icon text-center">
-              <div class="single-icon">
-                <i class="fas fa-mobile-alt"></i>
-                <p>
-                  연락처: 010-9414-4879
-                </p>
-              </div>
-            </div>
-          </div>
-          <!-- Start contact icon column -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="contact-icon text-center">
-              <div class="single-icon">
-                <i class="far fa-envelope"></i>
-                <p>
-                  Email: iseeuagain17@gmail.com<br>
-                </p>
-              </div>
-            </div>
-          </div>
-          <!-- Start contact icon column -->
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="contact-icon text-center">
-              <div class="single-icon">
-                <i class="fas fa-map-marker-alt"></i>
-                <p>
-                  위치: 서울특별시 강남구 테헤란로 2길 8<br>
-                  <span>4층 17호(역삼동, 마이워크 스페이스) “또봄”</span>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-
-          <!-- Start Google Map -->
-          <div class="col-md-6 col-sm-6 col-xs-12">
-            <!-- Start Map -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12661.745253263074!2d127.0287869!3d37.4976263!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4f3985f575ff7df5!2z66eI7J207JuM7YGs7Iqk7Y6Y7J207IqkIDLtmLjsoJA!5e0!3m2!1sko!2skr!4v1606223022101!5m2!1sko!2skr" width="100%" height="380" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            <!-- End Map -->
-          </div>
-          <!-- End Google Map -->
-
-          <!-- Start  contact -->
-          <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="form contact-form">
-              <div id="sendmessage">Your message has been sent. Thank you!</div>
-              <div id="errormessage"></div>
-              <form action="" method="post" role="form" class="contactForm">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                  <div class="validation"></div>
-                </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
-              </form>
-            </div>
-          </div>
-          <!-- End Left contact -->
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End Contact Area -->
 
   <!-- Start Footer bottom Area -->
   <footer>
