--- a/home/templates/business.html
+++ b/home/templates/business.html
@@ -20,34 +20,32 @@
         <div class="b_cont">
             <strong class="bc_t">여행버킷챌린지 ‘앎’ 캠페인</strong>
             <p>암투병 중인 환자가 완치 후 가고싶은 해외여행지를 설정, 달성 시 동행 및 여행경비 지원합니다. 암 투병 중이거나 추적 검사 중인 암 경험자들에게 질병을 극복할 수 있다는 자신감을 부여하고, 젊은 암 경험자들에 대한 인식 개선을 위한 캠페인입니다.</p>
-            <button type="button" class="btn btn-outline-dark">캠페인 보기</button>
+            <button type="button" class="btn btn-outline-dark">캠페인 보기 ></button>
         </div>
-
-        <div class="b_cont b_cont2">
-            <strong class="bc_t">여행포토북</strong>
-            <p>여행버킷리스트를 가고 싶은 의지를 불러일으킬 수 있는 매개체</p>
-        </div>
-        <div class="b_cont b_cont3">
-            <strong class="bc_t">해피 바이러스 봉사</strong>
-            <p>암을 극복한 사람들이 암환자에게 전하는 해피 바이러스 봉사</p>
-        </div>
+        <div class="b_cont b_cont_bot">
+            <strong class="bc_t">유튜브 채널 '또또봄tv' 운영 </strong>
+            <p>젊은 암 경험자 및 역경을 극복한 사람들의 전과 후를 인터뷰한 내용을 영상 제작하여 유튜브 채널을 운영하여, 극복의지를 심어주고, 정보 전달 및 인식개선을 위해 노력합니다.</p>
+        </div>            
     </div>
     <div class="b_cont_wrap">    
         <div class="b_tit">
             <p>소통 프로젝트</p>
         </div>
-        <div class="b_cont">
-            <strong class="bc_t">여행버킷리스트</strong>
-                <p>암환자와 소통하고 응원할 수 있는 소셜 채널 만들기</p>
-            <strong class="bc_t">힐링 콘서트</strong>
-                <p>여행버킷리스트를 가고 싶은 의지를 불러일으킬 수 있는 매개체</p>
-            <strong class="bc_t">소셜기부 챌린지</strong>
-                <p>치료비가 부족하여 치료가 어려운 2030대 암환자에게 치료비 지원하기</p>
-            <strong class="bc_t">암 극복 후 재취업 지원</strong>
-                <p>암을 극복한 사람들이 암환자에게 전하는 해피 바이러스 봉사</p>
+        <div class="b_cont b_cont_top">
+            <strong class="bc_t">암 경험자간 소통 모임 기획 및 지원</strong>
+            <p>젊은 암 경험자들이 모여 재능 및 정보 공유를 함으로써 경제적/정서적 안정감을 찾고, 이들의 권익이 침해되지 않도록 하여 사회에 조속히 복귀할 수 있도록 돕습니다. (2020년도는 코로나19로 비대면 모임으로 대체) </p>
+        </div>
+        <div class="b_cont b_cont2">
+            <strong class="bc_t">의학, 치료제 관련 의학 세미나 개최</strong>
+            <p>똑똑한 투병생활 및 치료 결정과정에서 환자 본인이 배제되지 않도록 연 1회 특정 암 질환에 대한 발병원인 및 임상 실험 결과 등에 대한 세미나를 진행하며, 대학병원 등과의 협력도 진행할 예정입니다.</p>
+        </div>
+        <div class="b_cont b_cont_bot">
+            <strong class="bc_t">온라인/오프라인 홍보 브로셔 발간</strong>
+            <p>젊은 암 경험자를 위한 예방, 치료, 회복에 관한 출판, 교육, 홍보 등의 사업을 수행합니다.</p>
         </div>
     </div>
     <!--//b_cont_wrap-->
+    <div class="clear_both">x</div>
 </div>
 <!--//business_wrap-->
 
