--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -116,7 +116,7 @@
 
 <!-- Start Footer bottom Area -->
 <footer>
-    <div class="footer-area" style="clear:both">
+    <div class="footer-area">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
