--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -11,20 +11,24 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    
+
     <!--templates css-->
     <link rel="stylesheet" href="/static/css/business.css">
-    
-    <!-- Main Stylesheet File 
+
+    <!-- Main Stylesheet File
     <link href="/static/css/style.css" rel="stylesheet">
     -->
-    
+
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!--JavaScript-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
     <!-- Libraries CSS Files -->
     <link href="/static/lib/nivo-slider/css/nivo-slider.css" rel="stylesheet">
@@ -36,149 +40,63 @@
 
     <!-- Nivo Slider Theme -->
     <link href="/static/css/nivo-slider-theme.css" rel="stylesheet">
-    
+
     <!-- Responsive Stylesheet File -->
     <link href="/static/css/responsive.css" rel="stylesheet">
-    
+
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900"
+        rel="stylesheet">
     {% block extra_script %}
     {% endblock %}
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
-<header>
-    <!-- header-area start -->
-    <div id="sticker" class="header-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <!-- Navigation -->
-                    <nav class="navbar navbar-default">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                                data-target=".bs-example-navbar-collapse-1" aria-expanded="false">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand page-scroll sticky-logo" href="{% url 'home' %}">
-                                <img src="/static/img/logo.png" class="logo" alt="">
-                            </a>
-                        </div>
-                        <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1"
-                            id="navbar-example">
-                            <ul class="nav navbar-nav navbar-right">
-                                <li class="active">
-                                    <a class="page-scroll" href="{% url 'home' %}">Home</a>
-                                </li>
-                                <li>
-                                    <a class="page-scroll" href="{% url 'establish' %}">about 또봄</a>
-                                </li>
-                                <li>
-                                    <a class="page-scroll" href="{% url 'business' %}">사업소개</a>
-                                </li>
-                                <li>
-                                    <a class="page-scroll" href="{% url 'activity' %}">또봄 활동</a>
-                                </li>
-                                <li>
-                                    <a class="page-scroll" href="{% url 'news' %}">News</a>
-                                </li>
-                                <li>
-                                    <a class="page-scroll" href="{% url 'event' %}">이벤트</a>
-                                </li>
-                                <li>
-                                    <a class="page-scroll" href="{% url 'scontent' %}">소셜채널 컨텐츠</a>
-                                </li>
-                                <li>
-                                    <a class="page-scroll" href="{% url 'support' %}">후원하기</a>
-                                </li>
-                                <li>
-                                    <a class="page-scroll" href="{% url 'map' %}">오시는길</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- navbar-collapse -->
-                    </nav>
-                    <!-- END: Navigation -->
-                </div>
+    <header style="padding-bottom: 20px;">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light"> <a href="http://127.0.0.1:8000/home/"
+                class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img src="/static/img/logo.png"
+                    alt="또봄 로고" style="width: 100%;"></a>
+            <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/establish" class="nav-link">설립취지</a></li>
+                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/business" class="nav-link">사업소개</a></li>
+                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/news" class="nav-link">뉴스</a></li>
+                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/event" class="nav-link">이벤트</a></li>
+                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/activity" class="nav-link">활동 모습</a></li>
+                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/scontent" class="nav-link">소셜 컨텐츠</a></li>
+                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/support" class="nav-link">후원</a></li>
+                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/map" class="nav-link">오시는 길</a></li>
+                </ul>
             </div>
-        </div>
-    </div>
-    <!-- header-area end -->
-</header>
-<!-- header end -->
-
+        </nav>
+    </header>
     {% block content %}
-    
+
     {% endblock %}
 
-<!-- Start Footer bottom Area -->
-<footer>
-    <div class="footer-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <div class="footer-content">
-                        <div class="footer-head">
-                            <div class="footer-logo">
-                                <h2>또봄</h2>
-                            </div>
-                            <div class="footer-icons">
-                                <ul>
-                                    <li>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-google"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- end single footer -->
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <div class="footer-content">
-                        <div class="footer-head">
-                            <h4>information</h4>
-                            <p>
-                                설명
-                            </p>
-                            <div class="footer-contacts">
-                                <p><span>Tel:</span> 010-9414-4879</p>
-                                <p><span>Email:</span> webmaster@iseeuagain.com</p>
-                                <p><span>Working Hours:</span> 9am-6pm</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- end single footer -->
-            </div>
-        </div>
-    </div>
-    <div class="footer-area-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12 col-xs-12">
-                    <div class="copyright text-center">
-                        <p>
-                            &copy; Copyright <strong>또봄</strong>. All Rights Reserved
-                        </p>
+    <!-- Start Footer bottom Area -->
+    <footer>
+        <section id="footer">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+                        <ul class="list-unstyled list-inline social text-center">
+                            <li class="list-inline-item"><a href="https:www.facebook.com/iseeua.page" title="페이스북"
+                                    target="blank"><i class="fa fa-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="https:www.instagram.com/iseeuagain/" title="인스타그램"
+                                    target="blank"><i class="fa fa-instagram"></i></a></li>
+                            <li class="list-inline-item"><a
+                                    href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA" title="유튜브"
+                                    target="blank"><i class="fa fa-play"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</footer>
-
+        </section>
+    </footer>
 </body>
 
 </html>
