--- a/home/templates/board.html
+++ b/home/templates/board.html
@@ -8,7 +8,7 @@
 <table>
     {% for list in postlist %}
     <ul>
-        <li><a href="{% url 'viewboard' pk=list.pk %}"></a>{{list.title}} <span>{{list.pub_date}}</span></a></li>
+        <li><a href="{% url 'viewboard' pk=list.pk %}">{{list.title}} <span>{{list.pub_date}}</span></a></li>
     </ul>
     {% endfor %}
     <!--<button><a href="newpost/">글쓰기</a></button>-->
@@ -18,7 +18,7 @@
 <table>
     {% for list in supportlist %}
     <ul>
-        <li>{{list.name}} <span>{{list.phone_number}}</span><span>{{list.email}}</span></a></li>
+        <li> {{list.name}} | <span>{{list.phone_number}} | </span><span>{{list.email}}</span></a></li>
     </ul>
     {% endfor %}
 </table>
