--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -82,15 +82,15 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="inputName">성명</label>
-                    <input type="text" class="form-control" id="inputName" placeholder="이름을 입력해 주세요">
+                    <input type="text" class="form-control" name="name" id="inputName" placeholder="이름을 입력해 주세요">
                 </div>
                 <div class="form-group">
                     <label for="inputMobile">연락처</label>
-                    <input type="tel" class="form-control" id="inputMobile" placeholder="휴대폰번호를 입력해 주세요">
+                    <input type="tel" class="form-control" name="phone_number" id="inputMobile" placeholder="'-'를 포함한 휴대폰번호를 입력해 주세요">
                 </div>
                 <div class="form-group">
                     <label for="InputEmail">이메일 주소</label>
-                    <input type="email" class="form-control" id="InputEmail" placeholder="이메일 주소를 입력해주세요">
+                    <input type="email" class="form-control" name="email" id="InputEmail" placeholder="이메일 주소를 입력해주세요">
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1">내용</label>
@@ -98,7 +98,7 @@
                         rows="3"></textarea>
                 </div>
                 <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <input type="checkbox" class="form-check-input" name="contents" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">개인정보 수집 동의</label>
                     <p style="font-size: 13px;">후원자님의 인적사항을 기록하기 위해 또는 문의사항 접수 및 처리를 위해 위와 같이 개인정보를 수집합니다.<br>
                         개인정보 수집 동의를 거부할 수있으며, 거부시 문의가 불가할 수 있습니다.</p>
