서버 테스트 후 오류 수정
서버 테스트 후 오류 수정

--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="row mb-4 pl-4 pr-4 bg">
         <div class="col">
-          <img src="../static/img/establish_kyca_1.png" >
+          <img src="/static/img/establish_kyca_1.png" >
         </div>
         <div class="col text-center">
             <h2>“ 미래를 이끌어갈 코어 2030대, 
@@ -87,7 +87,7 @@
     </div>
     <div class="row mb-3 border border-success" style="min-width: 610px;">
         <div class="col pt-2 pb-2 maxwith">
-             <img src="../static/img/img_about02.png" alt="" class="img-responsive">
+             <img src="/static/img/img_about02.png" alt="" class="img-responsive">
         </div>
         <div class="col pt-2 pb-2">
             <p class="text-secondary">여름 : 암 투병 전 활동적인</p>
