--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -54,21 +54,21 @@
 
 <body data-spy="scroll" data-target="#navbar-example">
     <header style="padding-bottom: 20px;">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light"> <a href="http://127.0.0.1:8000/home/"
+        <nav class="navbar navbar-expand-sm navbar-light bg-light"> <a href="{% url 'home' %}"
                 class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img src="/static/img/logo.png"
                     alt="또봄 로고" style="width: 100%;"></a>
             <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/establish" class="nav-link">설립취지</a></li>
-                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/business" class="nav-link">사업소개</a></li>
-                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/news" class="nav-link">뉴스</a></li>
-                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/event" class="nav-link">이벤트</a></li>
-                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/activity" class="nav-link">활동 모습</a></li>
-                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/scontent" class="nav-link">소셜 컨텐츠</a></li>
-                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/support" class="nav-link">후원</a></li>
-                    <li class="nav-item"><a href="http://127.0.0.1:8000/home/map" class="nav-link">오시는 길</a></li>
+                    <li class="nav-item"><a href="{% url 'establish' %}" class="nav-link">설립취지</a></li>
+                    <li class="nav-item"><a href="{% url 'business' %}" class="nav-link">사업소개</a></li>
+                    <li class="nav-item"><a href="{% url 'news' %}" class="nav-link">뉴스</a></li>
+                    <li class="nav-item"><a href="{% url 'event' %}" class="nav-link">이벤트</a></li>
+                    <li class="nav-item"><a href="{% url 'activity' %}" class="nav-link">활동 모습</a></li>
+                    <li class="nav-item"><a href="{% url 'scontent' %}" class="nav-link">소셜 컨텐츠</a></li>
+                    <li class="nav-item"><a href="{% url 'support' %}" class="nav-link">후원</a></li>
+                    <li class="nav-item"><a href="{% url 'map' %}" class="nav-link">오시는 길</a></li>
                 </ul>
             </div>
         </nav>
