--- a/home/templates/event.html
+++ b/home/templates/event.html
@@ -23,7 +23,7 @@
 
         <!-- Post1 -->
         <div class="card mb-4">
-          <img class="card-img-top" src="../static/img/event/1-1.png" alt="Card image cap">
+          <img class="card-img-top" src="/static/img/event/1-1.png" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">암 경험자간 소통 모임 기획 및 지원
             </h2>
@@ -37,7 +37,7 @@
 
         <!-- Post2 -->
         <div class="card mb-4">
-          <img class="card-img-top" src="../static/img/event/2-1.PNG" alt="Card image cap">
+          <img class="card-img-top" src="/static/img/event/2-1.PNG" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">여행버킷챌린지 ‘앎’ 캠페인
             </h2>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="modal-body" style="text-align: center;">
                         월 1 회 개최 (2020 년도는 코로나 19 로 비대면 모임으로 대체)
-                        <img src="../static/img/event/1-3.png" alt="" id="image" style="width:471px; height:223px;">
+                        <img src="/static/img/event/1-3.png" alt="" id="image" style="width:471px; height:223px;">
                     </div>
                 </div>
             </div>
@@ -83,8 +83,8 @@
                         추적검사 중인 친구들의 버킷리스트를 취합,선발을 통해 여행 버킷 챌린지를
                         시행하고자 합니다.<br>국내의 경우 반기당 1 회, 해외의 경우 연 1 회를 목표로 합니다. 
                         <br>(해당인원의 스토리를 포토북 또는 영상으로 제작하여 바이럴 진행)</p> 
-                        <img src="../static/img/event/2-2.png" alt="" id="image" style="width:395px; height:247px;">
-                        <img src="../static/img/event/2-3.png" alt="" id="image" style="width:379px; height:245px;">
+                        <img src="/static/img/event/2-2.png" alt="" id="image" style="width:395px; height:247px;">
+                        <img src="/static/img/event/2-3.png" alt="" id="image" style="width:379px; height:245px;">
                     </div>
                 </div>
             </div>
